--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -12,7 +12,7 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: #fff;
+    background: set-text-color($primary-color);
     @include easeout;
   }
   // rptate into x with menu lines
@@ -66,7 +66,7 @@
     background: darken($primary-color, 5);
     list-style: none;
     transform: translate3d(0, -100%, 0);
-    @include easeout();
+    @include easeout;
     &.show {
       //slide in from top
       transform: translate3d(0, 0, 0);
@@ -76,7 +76,7 @@
   &-branding {
     background: $primary-color;
     transform: translate3d(0, 100%, 0);
-    @include easeout();
+    @include easeout;
 
     &.show {
       //slide in from bottom
@@ -93,7 +93,7 @@
 
   .nav-item {
     transform: translate3d(600px, 0, 0);
-    @include easeout();
+    @include easeout;
     &.show {
       // slide in from right
       transform: translate3d(0, 0, 0);
@@ -110,7 +110,8 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
-    color: #fff;
+    color: set-text-color($primary-color);
+
     text-decoration: none;
     @include easeout;
 
