--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,9 +1,15 @@
 // widescreens
 @include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 //desktops & laoptos
 @include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 //Tablets and small laptops
@@ -35,7 +41,20 @@
     transform: translate3s(100%, 0, 0);
     .portrait {
       background: url ("../img/portrait_small.jpg");
+      width: 150px;
+      height: 150px;
     }
+  }
+  .about-info {
+    grid-template-areas:
+      "bioimage"
+      "bio"
+      "job1"
+      "job2"
+      "job3";
+  }
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -43,5 +62,8 @@
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+  .projects {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
